# esp32-playground

./: README.md
main/: CMakeLists.txt  app_main.c  hello_world_main.c  led_blink.c
main/common/: led_driver.c  led_driver.h
main/module_01/: module_01_led_blink.c  module_01_led_blink.h
main/module_02/: module_02_dual_led.c  module_02_dual_led.h
main/module_03/: module_03_uart_led.c  module_03_uart_led.h
main/module_04/: module_04_memory_management.c  module_04_memory_management.h
main/module_05/: module_05_queues.c  module_05_queues.h
main/module_06/: module_06_mutex.c  module_06_mutex.h
